Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4252

[C++] Status error context strings missing lines of code

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.13.0
    • C++

    Description

      The actual code, along with the line breaks, are missing:

      ArrowInvalid: ../src/arrow/python/numpy_to_arrow.cc:803 : ../src/arrow/python/numpy_to_arrow.cc:285 : ../src/arrow/python/numpy_to_arrow.cc:447 : ../src/arrow/python/numpy_to_arrow.cc:349 : ../src/arrow/compute/kernels/cast.cc:1436 : ../src/arrow/compute/kernels/cast.cc:1426 : ../src/arrow/compute/kernels/util-internal.cc:40 : Floating point value truncated
      

      I am not certain but I would guess this got broken during the Status usability refactoring

      cc fsaintjacques

      Attachments

        Issue Links

          Activity

            People

              fsaintjacques Francois Saint-Jacques
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m