ARROW-4252: [C++] Fix missing Status code and newline

Previous refactor of status message removed the stringification of the
failing expression.

Author: François Saint-Jacques <fsaintjacques@gmail.com>

Closes #3420 from fsaintjacques/ARROW-4252-status-error-message and squashes the following commits:

2b8d46c73 <François Saint-Jacques> ARROW-4252:  Fix missing Status missing code and newline